fixed text alignment with radio buttons

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,7 +10,7 @@
 /*****************/
 
 body {
-    font-family: 'Balsamiq Sans', cursive;
+    font-family: 'Oswald', sans-serif;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.6;
@@ -26,16 +26,16 @@ body::before {
     height: 100%;
     width: 100%;
     z-index: -1;
-    background-image: linear-gradient( 115deg, rgba(41, 41, 41, 0.8), rgba(90, 90, 90, 0.7) ), url(https://media2.fdncms.com/charleston/imager/u/original/7235917/j79a8415-tacocrawl-20170317.jpg);
+    background-image: url(https://media2.fdncms.com/charleston/imager/u/original/7235917/j79a8415-tacocrawl-20170317.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    
 }
 
 /*****************/
 /*Headings*
 /*****************/
+
 h1, p {
     text-align: center;
     margin-top: 0px;
@@ -50,6 +50,10 @@ p {
     margin: 0;
 }
 
+header {
+    margin-bottom: 40px;
+}
+
 /*****************/
 /*Survey*
 /*****************/
@@ -61,9 +65,10 @@ p {
 }
 
 form {
-    background: rgb(150, 150, 150);
+    background: #BAB2B5;
     opacity: .8;
     border-radius: .25rem;
+    color: #123C69;
 }
 
 form p {
@@ -78,7 +83,6 @@ form p {
 
 .form-group {
     opacity: 1;
-    display: block;
     padding: 10px;
 }
 
@@ -96,7 +100,16 @@ label {
     align-items: center;
 }
 
-.tacos {
-    vertical-align: center;
-    display: inline;
+#taco-love {
+  width: 100%;
+}
+
+#submit {
+  text-align: center;
+  max-width: 50%;
+}
+
+#tacos {
+  float: left;
+  vertical-align: middle;
 }
